Added Main Theme

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,15 @@ AssetBundles
 .idea/
 *.log
 
+Toobin/Assets/Scripts/Sound.cs
+Toobin/Assets/Scripts/AudioManager.cs
+Toobin/Assets/Scenes/Main.unity
+Toobin/Assets/Audio/Toobin_Theme.wav.meta
+Toobin/Assets/Audio/Toobin_Theme.wav
+Toobin/Assets/Scenes/Main.unity
+Toobin/Assets/Scripts/AudioManager.cs
+Toobin/Assets/Scripts/Sound.cs
+Toobin/Assets/Scenes/Main.unity
+Toobin/Assets/Scripts/AudioManager.cs
+Toobin/Assets/Scripts/Sound.cs
+Toobin/Assets/Scenes/Main.unity
